# pixel-to-action

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml
.jupyter/: jupyter_server_config.py
scripts/: camera_test.py  evaluate.py  play.py  train.py
src/pixel_to_action/envs/: husky_maze.py
