[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-vision-rl"
version = "0.1.0"
description = "Vision-based RL robotics in simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "gymnasium",
  "stable-baselines3",
  "pyyaml",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
